Correcting file name Evenk_Winter_Alexey.jpg

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="Baikal_summer.jpg" width="326" title="Летний Байкал" alt="Летний Байкал">
         <img src="Baikal_winter.jpg" width="320" title="Зимний Байкал" alt="Зимний Байкал">
         <img src="Baikal_yacht.jpg" width="320" title="Яхта на Байкале" alt="Яхта на Байкале">
-        <img src="Evenk Hiver Alexey.jpg" width="285" title="В горах Прибайкалья" alt="В горах Прибайкалья">
+        <img src="Evenk_Hiver_Alexey.jpg" width="285" title="В горах Прибайкалья" alt="В горах Прибайкалья">
         <p>Вот какая красота!</p>
         <!--<br>-->
         <h2>Чему я хочу научиться</h2>
